--- a/kraken/package.json
+++ b/kraken/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "android-platform-tools": "^3.0.2",
     "appium": "^2.5.4",
-    "kraken-node": "^1.0.24"
+    "kraken-node": "^1.0.24",
+    "playwright": "^1.43.1",
+    "resemblejs": "^5.0.0"
   }
 }
