--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,6 @@ cypress/screenshots/*
 kraken/resembleReport/results/*
 kraken_3_42/reports/*
 kraken_3_42/results/*
+
+backstop/screenshots/*
+backstop/backstop_data/*
