--- a/kraken/package.json
+++ b/kraken/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "android-platform-tools": "^3.0.2",
     "appium": "^2.5.4",
-    "faker": "^6.6.6",
     "kraken-node": "^1.0.24",
     "playwright": "^1.43.1",
     "resemblejs": "^5.0.0"
