--- a/.gitignore
+++ b/.gitignore
@@ -136,4 +136,12 @@ kraken/resembleReport/results/*
 kraken_3_42/reports/*
 kraken_3_42/results/*
 
+# Omitir screenshots y videos
 backstop/screenshots/*
+cypress/screenshots/*
+cypress/videos/*
+cypress/**/screenshots/*
+cypress/**/videos/*
+
+# Omitir archivo package-lock.json
+cypress/**/package-lock.json
